# ProjectScorpio

./: .gitignore  CMakeLists.txt  README.md
include/: acceleration_structure_vk.h  application.h  bindings.h  buffer_dx12.h  buffer_vk.h  camera.h  chunk_draw_list.h  chunk_entry.h  chunk_manager.h  chunk_mesh.h  chunk_mesh_data.h  chunk_mesh_gpu_dx12.h  chunk_mesh_gpu_gl.h  chunk_mesh_gpu_vk.h  chunk_pass_dx12.h  chunk_pass_vk.h  composite_pass_vk.h  compute_pipeline_dx12.h  compute_pipeline_vk.h  compute_shader.h  compute_shader_dx12.h  compute_shader_vk.h  constants.h  crosshair.h  crosshair_dx12.h  crosshair_vk.h  cubemap_dx12.h  cubemap_gl.h  cubemap_vk.h  debug_pass_dx12.h  debug_pass_vk.h  descriptor_set_dx12.h  descriptor_set_vk.h  dx12_main.h  fog_pass.h  fog_pass_dx12.h  fog_pass_gl.h  fog_pass_vk.h  frame_context_dx12.h  frame_context_vk.h  (+59 more)
res/: convert_spv.py
res/shader/chunk/: chunk.frag
res/shader/compositepass/: hybrid_compositepass.frag  post_compositepass.frag  post_compositepass.vert
res/shader/cubemap/: cubemap.frag
res/shader/fogpass/: fog.comp  fog.frag
res/shader/godraypass/: godray.comp
res/shader/hlsl/: helper.hlsl
res/shader/light/: light.frag  light.vert
res/shader/raytracing/: anyhit_alpha_mask.rahit  closesthit.rchit  closesthit_opaque.rchit  closesthit_water.rchit  common.glsl  miss.rmiss  raygen.rgen
res/shader/water/: water.frag
src/: main.cpp
src/chunk/: chunk_manager.cpp  chunk_mesh.cpp
src/chunk/dx12/: chunk_mesh_gpu_dx12.cpp
src/chunk/opengl/: chunk_mesh_gpu_gl.cpp
src/chunk/vulkan/: chunk_mesh_gpu_vk.cpp
src/core/: application.cpp  scene.cpp  scene_dx12.cpp  scene_vk.cpp
src/light/: light_dx12.cpp  light_gl.cpp  light_vk.cpp
src/main_dx12/: acceleration_structure_dx12.cpp  buffer_dx12.cpp  compute_pipeline_dx12.cpp  descriptor_set_dx12.cpp  dx12_main.cpp  graphics_pipeline_dx12.cpp
src/main_opengl/: opengl_main.cpp
src/main_vulkan/: acceleration_structure_vk.cpp  buffer_vk.cpp  compute_pipeline_vk.cpp  descriptor_set_vk.cpp  graphics_pipeline_vk.cpp  ray_tracing_pipeline_vk.cpp  shader_binding_table_vk.cpp  vulkan_main.cpp
src/player/: crosshair.cpp  crosshair_dx12.cpp  crosshair_vk.cpp
src/profiler/: timestamp_gpu_vk.cpp
src/renderer/dx12/: chunk_pass_dx12.cpp  debug_pass_dx12.cpp  fog_pass_dx12.cpp  gbuffer_pass_dx12.cpp  god_ray_pass_dx12.cpp  post_composite_pass_dx12.cpp  present_pass_dx12.cpp  renderer_dx12.cpp
src/renderer/opengl/: chunk_pass_gl.cpp  fog_pass.cpp  fog_pass_gl.cpp  fxaa_pass.cpp  god_ray_pass_gl.cpp  post_composite_pass_gl.cpp  present_pass.cpp  renderer_gl.cpp  shadow_map_pass_gl.cpp  ssao_pass.cpp  water_pass.cpp
src/renderer/vulkan/: chunk_pass_vk.cpp  (+13 more)
src/system/: camera.cpp
src/ui/: ui.cpp
(+46 files in other folders)
